    editdelete
    text_block     text_center     text_left     text_right     text_sub     text_super
    align_horizontally -> align-horizontal-center (oxygen)
    align_vertically -> align-vertical-center (oxygen)
    distribute_horizontally -> distribute-horizontal-x (oxygen)
    distribute_vertically -> distribute-vertical-y (oxygen)
    file_export_image -> document-export
    fileimport -> document-import
    imagegallery -> insert-image
    launch -> run-build (doxygen)
    paintbrush -> draw-brush (doxygen)
    rightjust -> format-justify-right (doxygen)
    routing_mode_auto -- not actually used
    routing_mode_manual -- not actually used
- fixed missing icons:
    - some icons are distributed inside the kde3 icons; find them there and install them under ktechlab icons
    ktechlab_mechanics - not actually used
    null - false positive
- add licence information about 3rd party icons
- fixed: when creating new project, ok/cancel does not work
- fixed: when creating a project, ktechlab crashes
- fixed more icons
    memory.png -> network-connect
    gplink.png -> merge
- fixed signal TextDocument::slotSelectionmChanged() -> KTextEditor::View::slotSelectionmChanged(KTextEditor::View*)
- when launching mircobe, also look in the installation prefix of ktechlab first.
    should fix "convert to microbe" when ktechlab is not in PATH
    - added fix into the run-simple.sh and run-developer.sh scripts; for installs in the PATH,
        this should not be needed
- fixed loading PIC program through the toolbar button; in property editor it works
- fixed converting C program to Assembly/Hex. Note that need to enable in GPLink options "Link with shared libs"
    error with __sdcc_gsinit_startup
    note: sdcc is broken in Debian/Ubuntu for PICs: https://bugs.launchpad.net/ubuntu/+source/sdcc/+bug/1077918
- fixed: when loading program to PIC, "all supported file types" is not valid
- fixed: converting C code to hex if destination file does not exist