@@ -110,7 +110,6 @@ Fixes needed for the first release candidate of the Qt4 port
 
 - minimize the number of bundled 3rd party icons; most should be usable from Oxygen icon theme
 
-- GPLink options pane is broken; GUI needs fixing
 - GPLink should have an option to set the libraries' path
 
 - loading C code to PIC fails
