@@ -114,3 +114,4 @@ Changes between Qt3 and Qt4 port (to be completed)
     note: sdcc is broken in Debian/Ubuntu for PICs: https://bugs.launchpad.net/ubuntu/+source/sdcc/+bug/1077918
 - fixed: when loading program to PIC, "all supported file types" is not valid
 - fixed: converting C code to hex if destination file does not exist
+- fixed GPLink options pane is broken; GUI needs fixing; added layout to the widget
